--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,11 @@ artifacts:
   name: server_x86
 deploy:
 - provider: GitHub
+  tag: server-v$(appveyor_build_version)
+  release: server_x86v$(appveyor_build_version)
   auth_token:
     secure: OdoOhZ2+EJf0DJWOi243B8YIQZjdGtVNMygkNi0BFE2NZARYToAehIHy6UmHfdvK
   repository: 4396NeverBeSlaves/simple_http_server
   artifact: server
-  draft: true
+  draft: false
   prerelease: false
