--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,16 @@
-version: 1.0.{build}
+version: 2.{build}
 image: Ubuntu1804
 build_script:
 - sh: make
 test: off
 artifacts:
-- path: server_deepin
-  name: server_deepin_x86_64
+- path: ./*
+  name: server_linux_x86_64
 deploy:
 - provider: GitHub
   auth_token:
     secure: OdoOhZ2+EJf0DJWOi243B8YIQZjdGtVNMygkNi0BFE2NZARYToAehIHy6UmHfdvK
   repository: 4396NeverBeSlaves/simple_http_server
-  artifact: server_deepin_x86_64
+  artifact: server_ubuntu
   draft: false
   prerelease: false
