--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ build_script:
 - sh: make
 test: off
 artifacts:
-- path: ./*
+- path: ./server_*
   name: server_linux_x86_64
 deploy:
 - provider: GitHub
